Wed Jan 31 14:25:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/REC/test-7.*: added more tests
	* libxslt/pattern.c libxslt/templates.c libxslt/transform.c:
	  fixing bugs raised by said tests

Tue Jan 30 18:55:49 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/REC/test-7.*: added more tests
	* libxslt/namespaces.[ch] libxslt/pattern.c libxslt/attributes.c
	  libxslt/templates.c libxslt/transform.c libxslt/xslt.c: fixing bugs
	  raised by said tests

Tue Jan 30 15:16:56 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO: updated
	* configure.in tests/Makefile.am tests/REC/*: started adding
	  some regression tests based from fragments of spec examples
	* libxslt/transform.c: fixed a problem on namespace generation

Mon Jan 29 18:40:23 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES: updated
	* tests/numbers/Makefile.am tests/numbers/format-number.*
	  tests/Makefile.am configure.in: added number formattting
	  test from Bjorn
	* libxslt/attributes.[ch]: separated attribute support, started
	  add support for attribute-sets
	* libxslt/functions.[ch]: update for number and formatting
	  from Bjorn
	* libxslt/transform.c libxslt/xslt.c libxslt/xsltInternals.h:
	  cleanups updates, etc ...

Mon Jan 29 00:53:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES: updated
	* libxslt/transform.c: added copy-of support
	* libxslt/xsltutils.[ch]: added xsltDocumentSortFunction()

Sun Jan 28 21:45:23 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES TODO: updates
	* libxslt/xsltutils.[ch] libxslt/xsltInternals.h libxslt/xsltutils.h:
	  added xsl:message

Sun Jan 28 17:25:35 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES TODO: updates
	* libxslt/namespaces.[ch] libxslt/templates.c libxslt/transform.c
	  libxslt/xslt.c libxslt/xsltInternals.h: added support for
	  namespace aliases and cleaned up the overall namespace related
	  code. This materialize as a new module.
