@@ -1,0 +1,4 @@
+<doc>
+    <person given-name="Joe" family-name="Bar"/>
+    <person given-name="Boc" family-name="Dude"/>
+</doc>
