@@ -1,0 +1,4 @@
+<doc>
+    <person><given-name>Joe</given-name><family-name>Bar</family-name></person>
+    <person><given-name>Boc</given-name><family-name>Dude</family-name></person>
+</doc>
