@@ -1,0 +1,14 @@
+<xsl:stylesheet
+  version="1.0"
+  xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+  xmlns:fo="http://www.w3.org/1999/XSL/Format"
+  xmlns:axsl="http://www.w3.org/1999/XSL/TransformAlias">
+
+<xsl:template match="person">
+  <p>
+   <xsl:value-of select="given-name"/>
+   <xsl:text> </xsl:text>
+   <xsl:value-of select="family-name"/>
+  </p>
+</xsl:template>
+</xsl:stylesheet>
