@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<img src="/images/headquarters.jpg" width="300"/>
