@@ -1,0 +1,4 @@
+<photograph>
+  <href>headquarters.jpg</href>
+  <size width="300"/>
+</photograph>
