@@ -1,0 +1,5 @@
+<namelist>
+  <name>name1</name>
+  <name>name2</name>
+  <name>name3</name>
+</namelist>
