@@ -1,0 +1,11 @@
+<xsl:stylesheet version="1.0"
+      xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+      xmlns:fo="http://www.w3.org/1999/XSL/Format">
+
+<xsl:strip-space elements="namelist"/>
+
+<xsl:template match="namelist/name">
+  <xsl:apply-templates/>
+  <xsl:if test="not(position()=last())">, </xsl:if>
+</xsl:template>
+</xsl:stylesheet>
